ci: adjust loading of different env file

--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "scripts": {
     "dev": "next dev --port 8080",
     "build": "next build",
+    "build-prod": "env-cmd -f env/.env.app.production bun run build",
+    "build-dev": "env-cmd -f env/.env.app.development bun run build",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "bun run lint --fix",
     "format": "prettier --check .; echo 'To write the changes: bun run format:fix'",
     "format:fix": "prettier -w . --list-different",
-    "deploy-dao": "bun ./scripts/deploy.ts",
     "prepare": "husky",
     "test": "bun test",
     "ts-check": "tsc --noEmit"
@@ -52,14 +53,15 @@
     "@aragon/osx-commons-configs": "^0.7.0",
     "@types/bun": "latest",
     "@types/dompurify": "^3.2.0",
+    "@types/libsodium-wrappers": "^0.7.14",
     "@types/node": "^20.17.6",
     "@types/react": "^18.3.12",
-    "@types/libsodium-wrappers": "^0.7.14",
     "@types/react-blockies": "^1.4.4",
     "@types/react-dom": "^18.3.1",
     "@typescript-eslint/eslint-plugin": "latest",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
+    "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
