--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --port 8080",
+    "dev": "env-cmd -f env/.env.app.development.local next dev --port 8080",
     "build": "next build",
+    "build-prod-local": "env-cmd -f env/.env.app.production.local bun run build",
+    "build-dev-local": "env-cmd -f env/.env.app.development.local bun run build",
     "build-prod": "env-cmd -f env/.env.app.production bun run build",
     "build-dev": "env-cmd -f env/.env.app.development bun run build",
-    "start": "next start",
     "lint": "next lint",
     "lint:fix": "bun run lint --fix",
     "format": "prettier --check .; echo 'To write the changes: bun run format:fix'",
