--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "scripts": {
     "dev": "env-cmd -f env/.env.app.development.local next dev --port 8080",
-    "build": "next build",
-    "build-prod-local": "env-cmd -f env/.env.app.production.local bun run build",
-    "build-dev-local": "env-cmd -f env/.env.app.development.local bun run build",
-    "build-prod": "env-cmd -f env/.env.app.production bun run build",
-    "build-dev": "env-cmd -f env/.env.app.development bun run build",
+    "build-prod-local": "NODE_ENV=production env-cmd -f env/.env.app.production.local next build",
+    "build-dev-local": "NODE_ENV=production env-cmd -f env/.env.app.development.local next build",
+    "build-prod": "NODE_ENV=production env-cmd -f env/.env.app.production next build",
+    "build-dev": "NODE_ENV=production env-cmd -f env/.env.app.development next build",
     "lint": "next lint",
     "lint:fix": "bun run lint --fix",
     "format": "prettier --check .; echo 'To write the changes: bun run format:fix'",
