--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,8 +64,8 @@ jobs:
             NEXT_PUBLIC_SEPOLIA_RPC_URL=${{ secrets.NEXT_PUBLIC_SEPOLIA_RPC_URL }}
             NEXT_PUBLIC_WEB3_STORAGE_KEY=${{ secrets.NEXT_PUBLIC_WEB3_STORAGE_KEY }}
             NEXT_PUBLIC_ETHERSCAN_API_KEY=${{ secrets.NEXT_PUBLIC_ETHERSCAN_API_KEY }}
-            NEXT_PUBLIC_ENABLED_CHAIN_IDS=${{ env.ENABLED_CHAINS }}
-            NEXT_PUBLIC_PREFERRED_CHAIN_ID=${{ env.PREFERRED_CHAIN }}
+#            NEXT_PUBLIC_ENABLED_CHAIN_IDS=${{ env.ENABLED_CHAINS }}
+#            NEXT_PUBLIC_PREFERRED_CHAIN_ID=${{ env.PREFERRED_CHAIN }}
 
       - name: Build
         run: ${{ env.BUILD_COMMAND }}
