build: use dotenvx instead for loading different env variables

--- a/package.json
+++ b/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "env-cmd -f env/.env.app.development.local next dev --port 8080",
-    "build-prod-local": "NODE_ENV=production env-cmd -f env/.env.app.production.local next build",
-    "build-dev-local": "NODE_ENV=production env-cmd -f env/.env.app.development.local next build",
-    "build-prod": "NODE_ENV=production env-cmd -f env/.env.app.production next build",
-    "build-dev": "NODE_ENV=production env-cmd -f env/.env.app.development next build",
+    "dev": "APP_ENV=development.local next dev --port 8080",
+    "build-prod-local": "NODE_ENV=production APP_ENV=production.local next build",
+    "build-dev-local": "NODE_ENV=production APP_ENV=development.local next build",
+    "build-prod": "NODE_ENV=production APP_ENV=production next build",
+    "build-dev": "NODE_ENV=production APP_ENV=development next build",
     "lint": "next lint",
     "lint:fix": "bun run lint --fix",
     "format": "prettier --check .; echo 'To write the changes: bun run format:fix'",
@@ -51,6 +51,7 @@
   },
   "devDependencies": {
     "@aragon/osx-commons-configs": "^0.7.0",
+    "@dotenvx/dotenvx": "^1.26.0",
     "@types/bun": "latest",
     "@types/dompurify": "^3.2.0",
     "@types/libsodium-wrappers": "^0.7.14",
@@ -61,7 +62,6 @@
     "@typescript-eslint/eslint-plugin": "latest",
     "autoprefixer": "^10.4.20",
     "dotenv": "^16.4.5",
-    "env-cmd": "^10.1.0",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.1.4",
     "eslint-config-prettier": "^9.1.0",
